// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate entities generate for scalars 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
		stringCol: string | null
		intCol: number | null
		doubleCol: number | null
		dateCol: string | null
		datetimeCol: string | null
		booleanCol: boolean | null
		jsonCol: JSONValue | null
		uuidCol: string | null
	}
	hasOne: {
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate for has enum 1`] = `
"import type { FooEnumCol } from './enums'

export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
		enumCol: FooEnumCol | null
	}
	hasOne: {
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate one has one 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasOneInverseRel: Bar['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		oneHasOneInverseRel: Bar
	}
	hasMany: {
	}
	hasManyBy: {
	}
}
export type Bar <OverRelation extends string | never = never> = {
	name: 'Bar'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasOneOwningRel: Foo['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		oneHasOneOwningRel: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	Bar: Bar
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate one has many 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasManyRel: Bar['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		oneHasManyRel: Bar<'manyHasOneRel'>
	}
	hasManyBy: {
	}
}
export type Bar <OverRelation extends string | never = never> = {
	name: 'Bar'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		manyHasOneRel: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	Bar: Bar
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate many has many 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		manyHasManyRel: Bar
	}
	hasManyBy: {
	}
}
export type Bar <OverRelation extends string | never = never> = {
	name: 'Bar'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		manyHasManyInverseRel: Foo
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	Bar: Bar
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate reduced has by 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ locales: FooLocale['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		locales: FooLocale<'foo'>
	}
	hasManyBy: {
		localesByLocale: { entity: FooLocale; by: {locale: string}  }
	}
}
export type FooLocale <OverRelation extends string | never = never> = {
	name: 'FooLocale'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ locale: string, foo: Foo['unique']}, OverRelation>
	columns: {
		id: string
		locale: string
	}
	hasOne: {
		foo: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	FooLocale: FooLocale
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;
